# meteogrid

./: .Rbuildignore  .gitignore  DESCRIPTION  DESCRIPTION~  LICENSE  NAMESPACE  NEWS  README  README.md  README~  TITLE  cleanup  configure  configure.ac  configure.win
R/: .interpol.R.swp  RcppExports.R  domains.R  geofield.R  geogrid.R  geowind.R  gg-graphics.R.notyet  global.R  graphics.R  interpol.R  local.R  map_restrict.R  meteogrid.R  obsolete.R  project.R  subgrid.R  upscale.R  utility.R  zzz.R
data/: worldcoast.RData  worldmap.RData
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/reference/: DomainExtent.html  DomainPoints.html  DrawLatLon.html  Make.domain.html  antipolygon.html  domainbox.html  geodomain.html  geofield.html  geowind.html  getmask.html  gridpoints.html  index.html  iview.html  laloclick.html  lalopoint.html  limage.html  map.restrict.html  obsplot.html  orthoglobe.html  palettes.html  plot.geodomain.html  point.interp.html  proj4.str2list.html  project.html  regrid.html  subgrid.html  upscale.html  utilities.html  vecplot.html  wind.dirspeed.html
man/: DomainExtent.Rd  DomainPoints.Rd  DrawLatLon.Rd  Make.domain.Rd  antipolygon.Rd  domainbox.Rd  geodomain.Rd  geofield.Rd  geowind.Rd  getmask.Rd  gridpoint.Rd  gridpoints.Rd  iview.Rd  laloclick.Rd  lalopoint.Rd  limage.Rd  limage.geofield.Rd  local.Rd  map.restrict.Rd  obsplot.Rd  orthoglobe.Rd  palettes.Rd  plot.geodomain.Rd  point.interp.Rd  proj4.str2list.Rd  project.Rd  regrid.Rd  seamask.Rd  subgrid.Rd  upscale.Rd  utilities.Rd  vecplot.Rd  wind.dirspeed.Rd  zoomgrid.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  Rproj4.c  geogrid.c  maprestrict.c  meteogrid.c  proj_version.cpp  project.c  project.cpp  upscale.c  upscale.cpp
